--- a/public/css/partials/_block.scss
+++ b/public/css/partials/_block.scss
@@ -29,7 +29,7 @@
 .hero-cta, .special-cta {
 	position: absolute;
 	left: 50%;
-	top: 105px;
+	top: 150px;
 	margin: 0 0 0 -305px;
 	width: 610px;
 	ul {
@@ -75,7 +75,7 @@
 		border-radius: 5px;
 		box-shadow: none;
 		color: #333;
-		font-size: 17px;
+		font-size: 18px;
 		&:focus {
 			outline: none;
 		}
